# rl-kg-agent

./: .gitignore  .python-version  CLAUDE.md  CLAUDE_OLD.md  MCP_INTEGRATION.md  Makefile  README.llm_browser.md  README.md  RL_KG_AGENT_SUMMARY.md  TORCHRL_INTEGRATION_PROPOSAL.md  TORCHRL_INTEGRATION_SUMMARY.md  TRAINING_VISUALIZATION.md  llm_browser.ipynb  pyproject.toml  rl_kg_agent_config.json  run_with_ssl.sh  test_integration.py  test_knowledge_graph.ttl  test_ssl_setup.py  torchrl_config.json  visualization_requirements.txt
config/: mcp_gym_atari_config_simple.yaml
configs/: default_config.json  mcp_config.json  training_config.json
examples/: README.md  basic_usage.py  evaluation_example.py  evaluation_questions.json  mcp_integration_example.py  sample_knowledge_graph.ttl  simple_knowledge_graph.ttl  test_questions.json  training_example.py  training_with_visualization.py
src/rl_kg_agent/: __init__.py  cli.py  config.py
src/rl_kg_agent/actions/: action_manager.py  action_space.py  action_space_old.py
src/rl_kg_agent/agents/: ppo_agent.py
src/rl_kg_agent/data/: dataset_loader.py
src/rl_kg_agent/envs/: __init__.py  torchrl_kg_env.py
src/rl_kg_agent/execution/: __init__.py  torchrl_action_executor.py
src/rl_kg_agent/knowledge/: internal_kg.py  kg_loader.py  llm_sparql_generator.py
src/rl_kg_agent/transforms/: __init__.py  hybrid_reward_transform.py  kg_transform.py
src/rl_kg_agent/utils/: enhanced_llm_client.py  env_config.py  http_mcp_client.py  http_mcp_manager.py  langchain_framework.py  llm_client.py  mcp_client.py  reward_calculator.py  simple_mcp_tools.py  training_visualizer.py
tests/: __init__.py  conftest.py  test_internal_kg.py  test_kg_loader.py  test_mcp_integration.py  test_reward_calculator.py  test_torchrl_integration.py
